--- a/index.html
+++ b/index.html
@@ -1,46 +1,15 @@
 <!doctype html>
 <html lang="en" ng-app="app">
-
-<head>
-    <meta charset="utf-8">
-    <title>Amazing Widgets</title>
-    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
-    <link rel="stylesheet" href="site.css">
-    <script src="bower_components/angular/angular.js"></script>
-    <script src="app.js"></script>
-</head>
-
-<body>
-    <div class="container" ng-controller="WidgetsController">
-        <div class="header">
-            <ul class="nav nav-pills pull-right">
-                <li class="active"><a href="#">Home</a>
-                </li>
-                <li><a href="about.html">About</a>
-                </li>
-            </ul>
-            <h3 class="text-muted">Amazing Widgets</h3>
-        </div>
-        <div class="jumbotron">
-            <h1>Amazing Widgets</h1>
-            <p class="load">Check out our amazing collection of widgets</p>
-        </div>
-        <div class="col-lg-12 widgets-list">
-        	Filter: <input ng-model="search"/>
-        	Order By: 
-        	<select ng-model="orderByField">
-        		<option value="name">Name</option>
-        		<option value="description">Description</option>
-        		<option value="cost">Cost</option>
-        	</select>
-            <div class="widgets-list-item" ng-repeat="widget in widgets | filter: search | orderBy : orderByField">
-                <h4>{{ widget.name }}</h4>
-                <img ng-src="images/{{ widget.thumbNailSrc }}" />
-                <p>{{ widget.description }}</p>
-                <p>${{ widget.cost }}</p>
-            </div>
-        </div>
-    </div>
-</body>
-
+    <head>
+        <meta charset="utf-8">
+        <title>Amazing Widgets</title>
+        <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
+        <link rel="stylesheet" href="site.css">
+        <script src="bower_components/angular/angular.js"></script>
+        <script src="bower_components/angular-route/angular-route.js"></script>
+        <script src="app.js"></script>
+    </head>
+    <body>
+        <div ng-view></div>
+    </body>
 </html>
