Step 2: Details View

--- a/home.html
+++ b/home.html
@@ -25,6 +25,7 @@
             <img ng-src="images/{{ widget.thumbNailSrc }}" />
             <p>{{ widget.description }}</p>
             <p>${{ widget.cost }}</p>
+            <p><a href="#/details/{{ widget.id }}">Details</a></p>
         </div>
         <div style="text-align:centre" ng-click="onClickAboutUs()">
             <span>About us</span>
